--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,18 @@
 	        </archive>
 	      </configuration>
 	    </plugin>
+
+        <plugin>
+            <artifactId>maven-release-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <!--
+                 During release:perform, enable the "release" profile
+                -->
+                <releaseProfiles>release</releaseProfiles>
+                <goals>deploy assembly:single</goals>
+            </configuration>
+        </plugin>
 	</plugins>
 </build>
 </project>
