--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,12 @@
           <version>13.0.1</version>
       </dependency>
 
+          <dependency>
+              <groupId>org.scalatest</groupId>
+              <artifactId>scalatest_2.10</artifactId>
+              <version>1.9.1</version>
+              <scope>test</scope>
+          </dependency>
   </dependencies>
       <build>
 	<plugins>
