--- a/src/main/resources/whirr/cloudbreak-whirr.properties
+++ b/src/main/resources/whirr/cloudbreak-whirr.properties
@@ -1,32 +1,29 @@
-;; This buffer is for notes you don't want to save, and for Lisp evaluation.
-;; If you want to create a file, visit that file with C-x C-f,
-;; then enter the text in that file's own buffer.
-
-accessKey = ####
-secretKey = ####
-
+# name of the cluster
 whirr.cluster-name=cloudbreak
+
+# cloud service provider
 whirr.provider=aws-ec2
 
+# credentials for your cloud provider
+# if using EC2 and S3, this is your AWS access credentials (Secret key ID and and secret key)
 whirr.identity=####
 whirr.credential=####
 
+# SSH keys to use to communicate with the cluster
 whirr.private-key-file=${sys:user.home}/.ssh/id_rsa_whirr
 whirr.public-key-file=${whirr.private-key-file}.pub
 
-# Change the name of cluster admin user
+# Name of cluster admin user
 whirr.cluster-user=${sys:user.name}
 
-# Change the number of machines in the cluster here
+# Number of machines in the cluster
 whirr.instance-templates=1 hadoop-namenode+hadoop-jobtracker,1 hadoop-datanode+hadoop-tasktracker
 
-#
 # Customise instance type or template / AMI per instance template
-#
-
 whirr.templates.hadoop-namenode+hadoop-jobtracker.hardware-id=m1.large
 whirr.templates.hadoop-namenode+hadoop-jobtracker.image-id=us-east-1/ami-bffa6fd6
 
+# AWS or other hardware type
 whirr.hardware-id=m2.xlarge
 
 # Ubuntu 10.04 LTS Lucid. See http://cloud.ubuntu.com/ami/
@@ -35,24 +32,17 @@ whirr.hardware-id=m2.xlarge
 # You can also specify the spot instance price: http://aws.amazon.com/ec2/spot-instances/
 whirr.aws-ec2-spot-price=0.41
 
-#
-# Expert: override Hadoop properties by setting properties with the prefix
-#
+# Version of hadoop to install.
+whirr.hadoop.version=0.20.2
+#whirr.hadoop.tarball.url=http://archive.apache.org/dist/hadoop/core/hadoop-${whirr.hadoop.version}/hadoop-${whirr.hadoop.version}.tar.gz
+whirr.hadoop.tarball.url=http://archive.cloudera.com/cdh/3/hadoop-0.20.2-cdh3u5.tar.gz
 
+#
 # hadoop-common, hadoop-hdfs, hadoop-mapreduce to set Common, HDFS, MapReduce
 # site properties, respectively. The prefix is removed by Whirr, so that for
 # example, setting
 # hadoop-common.fs.trash.interval=1440
 # will result in fs.trash.interval being set to 1440 in core-site.xml.
-
-#
-# Expert: specify the version of Hadoop to install.
-#
-
-whirr.hadoop.version=0.20.2
-#whirr.hadoop.tarball.url=http://archive.apache.org/dist/hadoop/core/hadoop-${whirr.hadoop.version}/hadoop-${whirr.hadoop.version}.tar.gz
-whirr.hadoop.tarball.url=http://archive.cloudera.com/cdh/3/hadoop-0.20.2-cdh3u5.tar.gz
-
 hadoop-mapreduce.mapred.map.child.java.opts=-Xmx6000m
 hadoop-mapreduce.mapred.reduce.child.java.opts=-Xmx6000m
 
