--- a/src/main/resources/whirr/cloudbreak-whirr.properties
+++ b/src/main/resources/whirr/cloudbreak-whirr.properties
@@ -1,3 +1,17 @@
+# Use this file to configure your cloud cluster. See the documentation
+# for Whirr at http://whirr.apache.org/ for more information on the
+# options available here. You will have to fill in the whirr.identity and
+# whirr.credential properties below to link Cloudbreak to your
+# billing account with the cloud provider. You'll also have to point it to
+# an ssh key file to use to access the cluster.
+#
+# The rest of the settings defaulted here in this file use Amazon EC2 to
+# create a cluster running Cloudera's CDH3 Hadoop distribution, with a namenode/jobtracker
+# instance of type m1.large and 15 datanode/tasktracker worker nodes of type
+# m1.xlarge. The settings use Amazon Spot Pricing to bid for work, with a maximum spot
+# price of $0.41 per hour per node (although typical spot prices are only a small
+# fraction of that).
+
 # name of the cluster
 whirr.cluster-name=cloudbreak
 
@@ -17,24 +31,24 @@ whirr.public-key-file=${whirr.private-key-file}.pub
 whirr.cluster-user=${sys:user.name}
 
 # Number of machines in the cluster
-whirr.instance-templates=1 hadoop-namenode+hadoop-jobtracker,1 hadoop-datanode+hadoop-tasktracker
+whirr.instance-templates=1 hadoop-namenode+hadoop-jobtracker,15 hadoop-datanode+hadoop-tasktracker
 
 # Customise instance type or template / AMI per instance template
 whirr.templates.hadoop-namenode+hadoop-jobtracker.hardware-id=m1.large
 whirr.templates.hadoop-namenode+hadoop-jobtracker.image-id=us-east-1/ami-bffa6fd6
 
 # AWS or other hardware type
-whirr.hardware-id=m2.xlarge
+whirr.hardware-id=m1.xlarge
 
 # Ubuntu 10.04 LTS Lucid. See http://cloud.ubuntu.com/ami/
 # whirr.image-id=us-east-1/ami-bffa6fd6
 
 # You can also specify the spot instance price: http://aws.amazon.com/ec2/spot-instances/
+# Comment out this line to use regular on-demand pricing.
 whirr.aws-ec2-spot-price=0.41
 
 # Version of hadoop to install.
 whirr.hadoop.version=0.20.2
-#whirr.hadoop.tarball.url=http://archive.apache.org/dist/hadoop/core/hadoop-${whirr.hadoop.version}/hadoop-${whirr.hadoop.version}.tar.gz
 whirr.hadoop.tarball.url=http://archive.cloudera.com/cdh/3/hadoop-0.20.2-cdh3u5.tar.gz
 
 #
@@ -43,6 +57,8 @@ whirr.hadoop.tarball.url=http://archive.cloudera.com/cdh/3/hadoop-0.20.2-cdh3u5.
 # example, setting
 # hadoop-common.fs.trash.interval=1440
 # will result in fs.trash.interval being set to 1440 in core-site.xml.
-hadoop-mapreduce.mapred.map.child.java.opts=-Xmx6000m
-hadoop-mapreduce.mapred.reduce.child.java.opts=-Xmx6000m
+#
+# example:
+# hadoop-mapreduce.mapred.map.child.java.opts=-Xmx6000m
+# hadoop-mapreduce.mapred.reduce.child.java.opts=-Xmx6000m
 
