--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
   <groupId>edu.ohsu.sonmezsysbio</groupId>
   <artifactId>cloudbreak</artifactId>
   <packaging>jar</packaging>
-  <version>0.3-SNAPSHOT</version>
+  <version>0.2.2</version>
   <name>cloudbreak</name>
     <scm>
         <connection>scm:git:git://github.com/cwhelan/${project.artifactId}.git</connection>
         <url>http://github.com/cwhelan/${project.artifactId}</url>
         <developerConnection>scm:git:git@github.com:cwhelan/${project.artifactId}.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>cloudbreak-0.2.2</tag>
   </scm>
   <url>http://maven.apache.org</url>
     <repositories>
