--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-            <url>file://${project.basedir}/repo</url>
+            <url>file://${project.basedir}${file.separator}repo</url>
         </repository>
 
 	</repositories>
